# MapReduceWasm

./: .gitignore  Cargo.toml  README.md  clean_out.sh  move_wasm_file.sh
map_wc/: Cargo.toml
map_wc/src/: bindings.rs  lib.rs
map_wc/wit/: world.wit
map_wc_py/: app.py
map_wc_py/mapper/: __init__.py
map_wc_py/mapper/exports/: __init__.py
master/: Cargo.toml
master/src/: lib.rs
reduce_wc/: Cargo.toml
reduce_wc/src/: bindings.rs  lib.rs
reduce_wc/wit/: world.wit
reduce_wc_c/: reduce.c  reduce.wit  reducer.c  reducer.h
src/: main.rs
utils/: Cargo.toml
utils/src/: lib.rs
worker/: Cargo.toml  map.wit
worker/src/: lib.rs  wasmmaprt.rs  wasmreducert.rs
